--- a/mobile2/mobile2/Pages/ListePokke.xaml
+++ b/mobile2/mobile2/Pages/ListePokke.xaml
@@ -12,7 +12,7 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Grid Padding="10">
-                        <Frame BorderColor="LightGray"
+                        <Frame BorderColor="Silver"
                                CornerRadius="30"
                                Grid.Column="0"
                                Grid.Row="0" 
